// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch overview 1 snapshot 1`] = `
<DocumentFragment>
  <label
    class="css-1y6xj52"
  >
    <input
      aria-label="Cecelia Langosh"
      checked=""
      class="css-p19g2b"
      type="checkbox"
    />
    <div
      class="css-18hnwoo"
    >
      <div
        class="css-vurnku"
      />
    </div>
    <span>
      Cecelia Langosh
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch overview 2 snapshot 1`] = `
<DocumentFragment>
  <label
    class="css-1y6xj52"
  >
    <input
      aria-label="Bernadette Langosh Jr."
      class="css-p19g2b"
      type="checkbox"
    />
    <div
      class="css-18hnwoo"
    >
      <div
        class="css-vurnku"
      />
    </div>
    <span>
      Bernadette Langosh Jr.
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch overview 3 snapshot 1`] = `
<DocumentFragment>
  <label
    class="css-1y6xj52"
  >
    <input
      aria-label="Effie Dietrich"
      checked=""
      class="css-p19g2b"
      type="checkbox"
    />
    <div
      class="css-18hnwoo"
    >
      <div
        class="css-vurnku"
      />
    </div>
    <span>
      Effie Dietrich
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch overview 4 snapshot 1`] = `
<DocumentFragment>
  <label
    class="css-1y6xj52"
  >
    <input
      aria-label="Adeline Welch"
      class="css-p19g2b"
      type="checkbox"
    />
    <div
      class="css-18hnwoo"
    >
      <div
        class="css-vurnku"
      />
    </div>
    <span>
      Adeline Welch
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch overview 5 snapshot 1`] = `
<DocumentFragment>
  <label
    class="css-1y6xj52"
  >
    <input
      aria-label="Lela McClure"
      checked=""
      class="css-p19g2b"
      type="checkbox"
    />
    <div
      class="css-18hnwoo"
    >
      <div
        class="css-vurnku"
      />
    </div>
    <span>
      Lela McClure
    </span>
  </label>
</DocumentFragment>
`;
